# ssd-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  agent.json  pyproject.toml  run_agent.sh
docs/diagrams/: level1-context.md  level4-code.md
skills/api-contract/: SKILL.md
skills/bdd-tdd/: SKILL.md
skills/domain-spec/: SKILL.md
skills/implementation/: SKILL.md
skills/review/: SKILL.md
src/ssd_agent/: __init__.py  __main__.py  agent.py  cli.py  permissions.py  schemas.py
src/ssd_agent/deep_agents/: __init__.py  subagents.py  supervisor.py
workspace/: .gitkeep
